--- a/config/packages/dev/swiftmailer.yaml
+++ b/config/packages/dev/swiftmailer.yaml
@@ -1,3 +1,4 @@
 # See https://symfony.com/doc/current/email/dev_environment.html
 swiftmailer:
-    url: '%env(MAILER_URL)%'
+    # send all emails to a specific address
+    delivery_addresses: ['%env(MAILER_URL)%']
